<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true" >

    <HorizontalScrollView
        android:id="@+id/hscrll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTxtDespesa"
                    android:text="@string/despesa"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTxtPago"
                    android:text="@string/naoPago"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLblDataCriacao"
                    android:text="@string/dataDeCriacao"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTxtDataCriacao"
                    android:text="@string/dataDeCriacao"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dataLancamento"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:id="@+id/lbl_data_lancamento" />

                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:text="@string/dataLancamento"
                    android:inputType="date"
                    android:id="@+id/editDtpDataLancamento"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descricao"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:id="@+id/lbl_descricao_lancamento"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descricao"
                    android:inputType="text"
                    android:id="@+id/editTxtDescricao"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:id="@+id/lbl_categoria"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editDdCategoria" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valor"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:id="@+id/lbl_valor"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valor"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTxtValor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar"
                    android:id="@+id/btnSalvarLancamento"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:id="@+id/btnCancelarLancamento"/>
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>
</ScrollView>